--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 :root {
-    --cor-principal: #0862ca;
+    --cor-principal: #1be0ee;
     --cor-secundaria: #92b3da;
     --cor-destaque: #17041d;
 }
